<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="56dp"
        android:text="@string/lblTítuloMainActivity"
        android:textAlignment="center"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnVerLista"
        android:layout_width="205dp"
        android:layout_height="60dp"
        android:layout_marginTop="68dp"
        android:onClick="btnVerLista_onClick"
        android:text="@string/btnVerLista"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <Button
        android:id="@+id/btnAgregarNombre"
        android:layout_width="205dp"
        android:layout_height="60dp"
        android:layout_marginTop="20dp"
        android:onClick="btnAgregarNombre_onClick"
        android:text="@string/btnAgregarNombre"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnVerLista" />

    <Button
        android:id="@+id/btnDatos"
        android:layout_width="205dp"
        android:layout_height="60dp"
        android:layout_marginTop="20dp"
        android:onClick="btnMisDatos_onClick"
        android:text="@string/btnDatos"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnAgregarNombre" />

</androidx.constraintlayout.widget.ConstraintLayout>